Some feedback, and some changes