@@ -1,5 +1,6 @@
 package no.nav.portal.rest.api.Helpers;
 import nav.portal.core.entities.HelpTextEntity;
+import nav.portal.core.enums.ServiceType;
 import nav.portal.core.repositories.HelpTextRepository;
 import no.nav.portal.rest.api.EntityDtoMappers;
 import no.portal.web.generated.api.*;
@@ -34,31 +35,27 @@ public class HelpTextControllerHelper {
     }
 
     public HelpTextDto retrieveOneHelpText(int helptext_number, ServiceTypeDto serviceTypeDto) {
-        HelpTextEntity helpTextEntity = EntityDtoMappers.toHelpTextEntity(helptext_number, serviceTypeDto);
-        return EntityDtoMappers.toHelpTextDto(helpTextRepository.retrieve(helpTextEntity.getNumber(),helpTextEntity.getType()));
+        return EntityDtoMappers.toHelpTextDto(helpTextRepository.retrieve(helptext_number, ServiceType.valueOf(serviceTypeDto.getValue())));
     }
 
     public List<HelpTextDto> getHelpTextServices() {
-        List<HelpTextDto> result = helpTextRepository.retrieveHelpTextServices()
+        return helpTextRepository.retrieveHelpTextServices()
                 .stream().map(EntityDtoMappers::toHelpTextDto)
-                .collect(Collectors.toList());
-        return result.stream().sorted(helpTextComparator)
-                .collect(Collectors.toList());
+                .sorted(helpTextComparator)
+                .toList();
     }
 
     public List<HelpTextDto> getHelpTextComponents() {
-        List<HelpTextDto> result = helpTextRepository.retrieveHelpTextComponents()
+       return helpTextRepository.retrieveHelpTextComponents()
                 .stream().map(EntityDtoMappers::toHelpTextDto)
-                .collect(Collectors.toList());
-        return result.stream().sorted(helpTextComparator)
-                .collect(Collectors.toList());
+                .sorted(helpTextComparator)
+                .toList();
     }
 
     public List<HelpTextDto> getAllHelpTexts(){
-        List<HelpTextDto> result = helpTextRepository.retrieveAllHelpTexts()
+        return helpTextRepository.retrieveAllHelpTexts()
                 .stream().map(EntityDtoMappers::toHelpTextDto)
-                .collect(Collectors.toList());
-        return result.stream().sorted(helpTextComparator)
+                .sorted(helpTextComparator)
                 .collect(Collectors.toList());
     }
 
